<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnGuardarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginBottom="45dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edtNombre"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <EditText
        android:id="@+id/edtAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/mother_l_m"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edtAP"
        app:layout_constraintTop_toBottomOf="@+id/edtAP" />

    <EditText
        android:id="@+id/edtDomicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edtAM"
        app:layout_constraintTop_toBottomOf="@+id/edtAM" />

    <EditText
        android:id="@+id/edtFN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/brithdate"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edtDomicilio"
        app:layout_constraintTop_toBottomOf="@+id/edtDomicilio" />

    <EditText
        android:id="@+id/edtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edtFN"
        app:layout_constraintTop_toBottomOf="@+id/edtFN" />

    <EditText
        android:id="@+id/edtMunicipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/Municipality"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edtEstado"
        app:layout_constraintTop_toBottomOf="@+id/edtEstado" />
</androidx.constraintlayout.widget.ConstraintLayout>